fix: bug mobile tap action

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         <div type="button" id="blue" class="btn blue"></div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.js"
-      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-      crossorigin="anonymous"
-    ></script>
+
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
+
     <script src="game.js" charset="utf-8"></script>
   </body>
 </html>
